--- a/custom_components/jarolift/services.yaml
+++ b/custom_components/jarolift/services.yaml
@@ -13,7 +13,7 @@ send_command:
       description: The serial of the addressed JARO lift
       example: '0x106aa01'
     rep_count:
-      description: Number of times that the tramission is repeated without increasing counter
+      description: Number of times that the transmission is repeated without increasing counter
       example: 4
     rep_delay:
       description: Delay in seconds between each transmission
